Fix reservation header and spacing

--- a/site/src/styles/view.scss
+++ b/site/src/styles/view.scss
@@ -35,7 +35,6 @@
     font-size: 1.5em;
     width: 85px;
     height: 100%;
-    top: 0;
     right: 0;
     color: #FFF;
     text-align: center;
@@ -49,7 +48,7 @@
       top: 8px;
       text-align: center;
       width: 100%;
-      opacity: 0.5;
+      opacity: 0.9;
     }
   }
 
